[package]
name = "parity-secretstore-blockchain-service"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
parity-secretstore-primitives = { path = "../secret-store/primitives" }
parking_lot = "0.10"
ethereum-types = "0.8"